Linked Backround scene with animation not updating with new depsgraph #50512

Closed
opened 2017-01-24 02:16:45 +01:00 by Jason schleifer · 15 comments

When I link in a scene that has animation in it, and set that scene as the background, the animation doesn't playback if I'm using the new depsgraph. This works fine w/out the new depsgraph.

Workflow:

launch blender with --enable-new-depsgraph flag
Create file1 with a scene called "layout". Animate a camera in the scene.
In file2, link file1/Scene/layout.
In the scene property panel set the scene background to be "layout"
Scrub in the timeline - notice the camera doesn't update.

If you launch blender w/out the enable-new-depsgraph flag, it works fine.

When I link in a scene that has animation in it, and set that scene as the background, the animation doesn't playback if I'm using the new depsgraph. This works fine w/out the new depsgraph. Workflow: launch blender with --enable-new-depsgraph flag Create file1 with a scene called "layout". Animate a camera in the scene. In file2, link file1/Scene/layout. In the scene property panel set the scene background to be "layout" Scrub in the timeline - notice the camera doesn't update. If you launch blender w/out the enable-new-depsgraph flag, it works fine.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JasonSchleifer

Added subscriber: @JasonSchleifer
Member

Added subscriber: @TheOnlyJoey

Added subscriber: @TheOnlyJoey
Member

Thanks for the report.

We need a bit of information though.
Which version of Blender is used, and have you tried with the latest buildbot release to see if it is fixed already?
Also PC specifications and OS would be useful.

Thanks

Thanks for the report. We need a bit of information though. Which version of Blender is used, and have you tried with the latest buildbot release to see if it is fixed already? Also PC specifications and OS would be useful. Thanks
Author
Member

Hi Joey,

I tried it with 2.78 and with the latest build from yesterday, and it didn't work with either. Both on mac and on windows.

  • jason
Hi Joey, I tried it with 2.78 and with the latest build from yesterday, and it didn't work with either. Both on mac and on windows. - jason
Author
Member

Here's a file demonstrating the issue..

if you unzip it and load blender using the --enable-new-depsgraph flag, then load Shot_01.blend you'll see that it's got cubeScene.blend linked it, and cubeScene as the background. Scrub in time, and you can see that the animation isn't updating.

linkedAnim.zip

Here's a file demonstrating the issue.. if you unzip it and load blender using the --enable-new-depsgraph flag, then load Shot_01.blend you'll see that it's got cubeScene.blend linked it, and cubeScene as the background. Scrub in time, and you can see that the animation isn't updating. [linkedAnim.zip](https://archive.blender.org/developer/F439676/linkedAnim.zip)
Author
Member

Switching back to needs triage

Switching back to needs triage
Sergey Sharybin self-assigned this 2017-01-25 12:00:25 +01:00

This issue was referenced by e29a6f739d

This issue was referenced by e29a6f739de36f4d33cd37181a946345bd26503d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

This comment was removed by @JasonSchleifer

*This comment was removed by @JasonSchleifer*
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

I just checked this in the official 2.78b release on OS X and the bug is back. Did it not get checked into main? We were relying on this fix for a bunch of shots. :(

I just checked this in the official 2.78b release on OS X and the bug is back. Did it not get checked into main? We were relying on this fix for a bunch of shots. :(
Author
Member

I checked in the daily build from today, and it does work correctly. Why was this pulled from the official release? Any chance it can be patched back in?

I checked in the daily build from today, and it does work correctly. Why was this pulled from the official release? Any chance it can be patched back in?
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

I think all current patches in master are staged for 2.79.
2.78b had a very specific set of fixes that were allowed for a 'b' release. I would suggest using a buildbot version at the moment or be patient for 2.79 which is due in a couple of months.

Closing as this is fixed in master.

I think all current patches in master are staged for 2.79. 2.78b had a very specific set of fixes that were allowed for a 'b' release. I would suggest using a buildbot version at the moment or be patient for 2.79 which is due in a couple of months. Closing as this is fixed in master.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50512
No description provided.