Fix T50512: Linked Backround scene with animation not updating with new depsgraph

Was missing relations for the set scenes.

Perhaps not ideal solution, but should be good enough for now.